--- a/Hiremi/Hiremiapp/templates/Intern-Applied.html
+++ b/Hiremi/Hiremiapp/templates/Intern-Applied.html
@@ -64,14 +64,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for i in data %}
+                    {% for i in registers_data %}
                     <tr>
                         <td>{{forloop.counter}}</td>
                         <td>********</td>
                         <td>{{i.full_name}}</td>
                         <td>{{i.email}} </td>
                         <td>{{i.phone_number}} </td>
-                        <td>{{i.profile}} </td>
+                        <td>{{internship_field}} </td>
                         <td>{{i.date_of_birth}} </td>
                         <td>{{i.college_state}} </td>
                         <td>{{i.passing_year}}</td> 
