--- a/Hiremi/Hiremiapp/templates/Intern-Applied.html
+++ b/Hiremi/Hiremiapp/templates/Intern-Applied.html
@@ -71,7 +71,7 @@
                         <td>{{i.full_name}}</td>
                         <td>{{i.email}} </td>
                         <td>{{i.phone_number}} </td>
-                        <td>{{internship_field}} </td>
+                        <td>{{internship_profiles}} </td>
                         <td>{{i.date_of_birth}} </td>
                         <td>{{i.college_state}} </td>
                         <td>{{i.passing_year}}</td> 
