--- a/Hiremi/Hiremiapp/templates/Intern-Pf-1.html
+++ b/Hiremi/Hiremiapp/templates/Intern-Pf-1.html
@@ -68,8 +68,8 @@
                     </div>
                     <div class="status">
                         <h3>Status :</h3> <p class="ver1">{{data.candidate_status}}</p>
-                        <p class="ver2"><a href="{% url "select" pk=data.id %}">Select</a></p>
-                        <p class="ver3"><a href="{% url "reject" pk=data.id %}">Rejected</a></p>
+                        <p class="ver2"><a href="">Select</a></p>
+                        <p class="ver3"><a href="">Rejected</a></p>
                     </div>
                     <div>
                         <h3>Mode :</h3> <p1>Internship</p1>
