--- a/Hiremi/Hiremiapp/templates/Intern-Pf-1.html
+++ b/Hiremi/Hiremiapp/templates/Intern-Pf-1.html
@@ -11,23 +11,23 @@
 </head>
 <body>
     <header>
-        <h1><img src="../static/asset/icon.png" alt=""></h1>
+        <h1><img src="{% static "asset/icon.png" %}" alt=""></h1>
         <p>Super Admin</p>
         <nav>
             <ul>
                 <li></li>
-                <li><a href="#"><i class='bx bx-home-alt'></i> Dashboard</a></li>
+                <li><a href="{% url "dashboard" %}"><i class='bx bx-home-alt'></i> Dashboard</a></li>
                 <li><a href="#"><i class="fa-solid fa-chart-simple"></i> Analytics</a></li>
                 <li><a href="#"><i class="fa-solid fa-file-arrow-down"></i>  App Download Status</a></li>
-                <li><a href="#"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
-                <li><a href="#"><i class="fa-solid fa-desktop"></i> Internship</a></li>
-                <li><a href="#"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
+                <li><a href="{% url "Mentoreship" %}"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
+                <li><a href="{% url "internship" %}"><i class="fa-solid fa-desktop"></i> Internship</a></li>
+                <li><a href="{% url "fresher" %}"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
                 <li><a href="#"><i class='bx bx-briefcase' ></i> Experience</a></li>
-                <li><a href="#"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
+                <li><a href="{% url "corporate_training" %}"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
                 <li><a href="#"><i class="fa-regular fa-file"></i> Courses</a></li>
                 <li><a href="#"><i class='bx bxs-report'></i> Project Report</a></li>
                 <li><a href="#"><i class="fa-regular fa-user"></i> Admin Settings</a></li>
-                <li><a href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a></li>
+                <li><a href="{% url "superuser_logout" %}"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -68,8 +68,8 @@
                     </div>
                     <div class="status">
                         <h3>Status :</h3> <p class="ver1">{{data.candidate_status}}</p>
-                        <p class="ver2"><a href="">Select</a></p>
-                        <p class="ver3"><a href="">Rejected</a></p>
+                        <p class="ver2"><a href="{% url "Select_intern" pk=data.id %}">Select</a></p>
+                        <p class="ver3"><a href="{% url "Reject_intern" pk=data.id %}">Rejected</a></p>
                     </div>
                     <div>
                         <h3>Mode :</h3> <p1>Internship</p1>
