--- a/Hiremi/Hiremiapp/templates/index.html
+++ b/Hiremi/Hiremiapp/templates/index.html
@@ -13,7 +13,7 @@
     <div class="bg">
         <div class="login">
             <div class="logo">
-                <img class="" src="{% static "images\logo.jpg" %}" alt="">
+                <img class="" src="{% static "asset/icon.png" %}" alt="">
             </div>
             <div class="log">
                 <form  action="{% url "superuser_login" %}" method="POST">
