--- a/Hiremi/Hiremiapp/templates/Intern-Selected.html
+++ b/Hiremi/Hiremiapp/templates/Intern-Selected.html
@@ -11,18 +11,19 @@
 </head>
 <body>
     <header>
-        <h1><img src="../static/asset/icon.png" alt=""></h1>
+        <h1><img src="{% static "asset/icon.png" %}" alt=""></h1>
         <p>Super Admin</p>
         <nav>
             <ul>
-                <li><a href="#"><i class='bx bx-home-alt'></i> Dashboard</a></li>
+                <li></li>
+                <li><a href="{% url "dashboard" %}"><i class='bx bx-home-alt'></i> Dashboard</a></li>
                 <li><a href="#"><i class="fa-solid fa-chart-simple"></i> Analytics</a></li>
                 <li><a href="#"><i class="fa-solid fa-file-arrow-down"></i>  App Download Status</a></li>
-                <li><a href="#"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
-                <li><a href="#"><i class="fa-solid fa-desktop"></i> Internship</a></li>
-                <li><a href="#"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
+                <li><a href="{% url "Mentoreship" %}"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
+                <li><a href="{% url "internship" %}"><i class="fa-solid fa-desktop"></i> Internship</a></li>
+                <li><a href="{% url "fresher" %}"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
                 <li><a href="#"><i class='bx bx-briefcase' ></i> Experience</a></li>
-                <li><a href="#"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
+                <li><a href="{% url "corporate_training" %}"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
                 <li><a href="#"><i class="fa-regular fa-file"></i> Courses</a></li>
                 <li><a href="#"><i class='bx bxs-report'></i> Project Report</a></li>
                 <li><a href="#"><i class="fa-regular fa-user"></i> Admin Settings</a></li>
