--- a/Hiremi/Hiremiapp/templates/corporate.html
+++ b/Hiremi/Hiremiapp/templates/corporate.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/861ce09321.js" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static "css/Internship.css" %}">
+    <title>State Ranking</title>
+    <link rel="stylesheet" href="{% static "css/mentoreship.css" %}">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
                 <li><a href="{% url "internship" %}"><i class="fa-solid fa-desktop"></i> Internship</a></li>
                 <li><a href="{% url "fresher" %}"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
                 <li><a href="#"><i class='bx bx-briefcase' ></i> Experience</a></li>
-                <li><a href="{% url "corporate_training" %}"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
+                <li><a href="#"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
                 <li><a href="#"><i class="fa-regular fa-file"></i> Courses</a></li>
                 <li><a href="#"><i class='bx bxs-report'></i> Project Report</a></li>
                 <li><a href="#"><i class="fa-regular fa-user"></i> Admin Settings</a></li>
@@ -31,9 +31,6 @@
             </ul>
         </nav>
     </header>
-
-    <!-- -------search-bar-------------- -->
-
     <div class="search">
         <div class="sec-inp">
             <div class="inp-bg">
@@ -43,22 +40,19 @@
             </div>
         </div>
     </div>
-
-    <!-- --------------status------------- -->
-
-    <div class="ac-in">
-        <h4 class="title">Internship Status All</h4>
-    </div>
     <div class="account">
+        <div class="ac-in">
+            <h4 class="title">Corporate Status All</h4>
+        </div>
         <div class="statement">
             <div class="ac-st">
                 <div class="icon">
-                    <img src="../static/asset/Dash-1.png" alt="">
+                    <i class="fa-solid fa-user"></i>
                 </div>
                 <div class="state">
-                    <h3>{{intern_count}}</h3>
-                    <p1>Total Accounts Created</p1>
-                    <p><a href="{% url "intern_applied" %}">View All</a> <i class="fa-solid fa-arrow-right"></i></p>
+                    <h3>{{corporate_training_count}}</h3>
+                    <p1>Corporate Training Applied</p1>
+                    <p><a href="{% url "corporate_dash1" %}">View All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+40%</p1>
@@ -68,12 +62,12 @@
             <br>
             <div class="ac-st">
                 <div class="icon">
-                    <img src="../static/asset/dash-2.png" alt="">
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <div class="state">
-                    <h3>{{Pending_count}}</h3>
-                    <p1>Pending</p1>
-                    <p>view All <i class="fa-solid fa-arrow-right"></i></p>
+                    <h3>{{select_count}}</h3>
+                    <p1>Selected</p1>
+                    <p><a href="{% url "Mentor_dash2" %}">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+32%</p1>
@@ -81,18 +75,15 @@
                 </div>
             </div>
         </div>
-
-        <!-- ------------------------------------- -->
-
         <div class="statement">
             <div class="ac-st">
                 <div class="icon">
-                    <img src="../static/asset/dash-2.png" alt="">
+                    <i class="fa-solid fa-credit-card"></i>
                 </div>
                 <div class="state">
-                    <h3>{{Select_count}}</h3>
-                    <p1>Selected</p1>
-                    <p>view All <i class="fa-solid fa-arrow-right"></i></p>
+                    <h3>{{Reject_count}}</h3>
+                    <p1>Rejected</p1>
+                    <p><a href="">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+32%</p1>
@@ -102,22 +93,54 @@
             <br>
             <div class="ac-st">
                 <div class="icon">
-                    <img src="../static/asset/dash-3.png" alt="">
+                    <i class="fa-solid fa-file-circle-xmark"></i>
                 </div>
                 <div class="state">
-                    <h3>{{Reject_count}}</h3>
-                    <p1>Rejected</p1>
+                    <h3>10</h3>
+                    <p1>Waiting For Payment</p1>
                     <p>view All <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+                <div class="sub-st">
+                    <p1>+40%</p1>
+                    <p>This month</p>
+                </div><br>
+            </div>
+        </div>
+        <div class="statement">
+            <div class="ac-st">
+                <div class="icon">
+                    <i class="fa-solid fa-credit-card"></i>
+                </div>
+                <div class="state">
+                    <h3>30</h3>
+                    <p1>Acceped</p1>
+                    <p><a href="">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+32%</p1>
                     <p>This month</p>
                 </div>
             </div>
-        </div>
-
+            <br>
+            <div class="ac-st">
+                <div class="icon">
+                    <i class="fa-solid fa-file-circle-xmark"></i>
+                </div>
+                <div class="state">
+                    <h3>{{Notenroll_count}}</h3>
+                    <p1>Non-Enroll</p1>
+                    <p>view All <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
+                <div class="sub-st">
+                    <p1>+40%</p1>
+                    <p>This month</p>
+                </div><br>
+            </div>
+        </div><br><br><br><br>
         
+        
+            </div>
+        </div>
     </div>
-    
 </body>
 </html>
