--- a/Hiremi/Hiremiapp/templates/dashboard.html
+++ b/Hiremi/Hiremiapp/templates/dashboard.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Hiremi</h1>
+        <h1><img src="{% static "asset/icon.png" %}" alt=""></h1>
         <p>Super Admin</p>
         <nav>
             <ul>
@@ -19,11 +19,11 @@
                 <li><a href="{% url "dashboard" %}"><i class='bx bx-home-alt'></i> Dashboard</a></li>
                 <li><a href="#"><i class="fa-solid fa-chart-simple"></i> Analytics</a></li>
                 <li><a href="#"><i class="fa-solid fa-file-arrow-down"></i>  App Download Status</a></li>
-                <li><a href="#"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
+                <li><a href="{% url "Mentoreship" %}"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
                 <li><a href="{% url "internship" %}"><i class="fa-solid fa-desktop"></i> Internship</a></li>
-                <li><a href="#"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
+                <li><a href="{% url "fresher" %}"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
                 <li><a href="#"><i class='bx bx-briefcase' ></i> Experience</a></li>
-                <li><a href="#"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
+                <li><a href="{% url "corporate_training" %}"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
                 <li><a href="#"><i class="fa-regular fa-file"></i> Courses</a></li>
                 <li><a href="#"><i class='bx bxs-report'></i> Project Report</a></li>
                 <li><a href="#"><i class="fa-regular fa-user"></i> Admin Settings</a></li>
@@ -67,7 +67,7 @@
                 <div class="state">
                     <h3>{{verified_count}}</h3>
                     <p1>Total Accounts Verified</p1>
-                    <p>view All <i class="fa-solid fa-arrow-right"></i></p>
+                    <p><a href="{% url "dashboard2" %}">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+32%</p1>
@@ -98,7 +98,7 @@
                 <div class="state">
                     <h3>{{unverified_count}}</h3>
                     <p1>Non-Verified Accounts</p1>
-                    <p>view All <i class="fa-solid fa-arrow-right"></i></p>
+                    <p><a href="{% url "dashboard4" %}">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+40%</p1>
@@ -129,265 +129,15 @@
                         </tr>
                     </thead>
                     <tbody>
+                        {% for state, counts in state_counts.items %}
                         <tr>
-                            <td>1.</td>
-                            <td>Andhra Pradesh</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
+                            <td>{{ forloop.counter }}</td>
+                            <td>{{ state }}</td>
+                            <td>{{ counts.total }}</td>
+                            <td>{{ counts.verified }}</td>
+                            <td>{{ counts.unverified }}</td>
                         </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>2.</td>
-                            <td>Aurnachal Pradesh</td>
-                            <td>500</td>
-                            <td>430</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>3.</td>
-                            <td>Assam</td>
-                            <td>300</td>
-                            <td>235</td>
-                            <td>65</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>4.</td>
-                            <td>Bihar</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>5.</td>
-                            <td>Chhattisgarh</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>6.</td>
-                            <td>Goa</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>7.</td>
-                            <td>Gujarat</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>8.</td>
-                            <td>Haryana</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>9.</td>
-                            <td>Himachal Pradesh</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>10.</td>
-                            <td>Jharkhand</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>11.</td>
-                            <td>Karnataka</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>12.</td>
-                            <td>Kerala</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>13.</td>
-                            <td>Madhya Pradesh</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>14.</td>
-                            <td>Maharashtra</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>15.</td>
-                            <td>Manipur</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>16.</td>
-                            <td>Meghalaya</td>
-                            <td>500</td>
-                            <td>430</td>
-                            <td>70</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>17.</td>
-                            <td>Mizoram</td>
-                            <td>300</td>
-                            <td>235</td>
-                            <td>65</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>18.</td>
-                            <td>Nagaland</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>19.</td>
-                            <td>Odisha</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>20.</td>
-                            <td>Punjab</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>21.</td>
-                            <td>Rajasthan</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>22.</td>
-                            <td>Sikkim</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>23.</td>
-                            <td>Tamil Nadu</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>24.</td>
-                            <td>Telangana</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>25.</td>
-                            <td>Tripura</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>26.</td>
-                            <td>Uttar Pradesh</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>27.</td>
-                            <td>Uttarakhand</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>28.</td>
-                            <td>West Bengal</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr>
-                            <td>29.</td>
-                            <td>Jammu and kashmir</td>
-                            <td>900</td>
-                            <td>500</td>
-                            <td>400</td>
-                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
