--- a/Hiremi/Hiremiapp/templates/dashboard1.html
+++ b/Hiremi/Hiremiapp/templates/dashboard1.html
@@ -11,19 +11,19 @@
 </head>
 <body>
     <header>
-        <h1>Hiremi  </h1>
+        <h1><img src="{% static "asset/icon.png" %}" alt=""></h1>
         <p>Super Admin</p>
         <nav>
             <ul>
                 <li></li>
-                <li><a href="#"><i class='bx bx-home-alt'></i> Dashboard</a></li>
+                <li><a href="{% url "dashboard" %}"><i class='bx bx-home-alt'></i> Dashboard</a></li>
                 <li><a href="#"><i class="fa-solid fa-chart-simple"></i> Analytics</a></li>
                 <li><a href="#"><i class="fa-solid fa-file-arrow-down"></i>  App Download Status</a></li>
-                <li><a href="#"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
-                <li><a href="#"><i class="fa-solid fa-desktop"></i> Internship</a></li>
-                <li><a href="#"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
+                <li><a href="{% url "Mentoreship" %}"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
+                <li><a href="{% url "internship" %}"><i class="fa-solid fa-desktop"></i> Internship</a></li>
+                <li><a href="{% url "fresher" %}"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
                 <li><a href="#"><i class='bx bx-briefcase' ></i> Experience</a></li>
-                <li><a href="#"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
+                <li><a href="{% url "corporate_training" %}"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
                 <li><a href="#"><i class="fa-regular fa-file"></i> Courses</a></li>
                 <li><a href="#"><i class='bx bxs-report'></i> Project Report</a></li>
                 <li><a href="#"><i class="fa-regular fa-user"></i> Admin Settings</a></li>
@@ -75,7 +75,7 @@
                         <td>{{i.date_of_birth}} </td>
                         <td>{{i.gender}} </td>
                         <td><div class="ver2">{{i.verified}}</div></td>
-                        <td><div class="view"><a href="{% url "view_Info" pk=i.id %}">View</a></div></td>
+                        <td><div class="view"><a href="{% url "view_Info1" pk=i.id %}">View</a></div></td>
                     </tr>
                     {% endfor %}
                   </tbody>
