--- a/Hiremi/Hiremiapp/templates/dashboard4.html
+++ b/Hiremi/Hiremiapp/templates/dashboard4.html
@@ -11,19 +11,19 @@
 </head>
 <body>
     <header>
-        <h1>Hiremi  </h1>
+        <h1><img src="{% static "asset/icon.png" %}" alt=""></h1>
         <p>Super Admin</p>
         <nav>
             <ul>
                 <li></li>
-                <li><a href="#"><i class='bx bx-home-alt'></i> Dashboard</a></li>
+                <li><a href="{% url "dashboard" %}"><i class='bx bx-home-alt'></i> Dashboard</a></li>
                 <li><a href="#"><i class="fa-solid fa-chart-simple"></i> Analytics</a></li>
                 <li><a href="#"><i class="fa-solid fa-file-arrow-down"></i>  App Download Status</a></li>
-                <li><a href="#"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
-                <li><a href="#"><i class="fa-solid fa-desktop"></i> Internship</a></li>
-                <li><a href="#"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
+                <li><a href="{% url "Mentoreship" %}"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
+                <li><a href="{% url "internship" %}"><i class="fa-solid fa-desktop"></i> Internship</a></li>
+                <li><a href="{% url "fresher" %}"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
                 <li><a href="#"><i class='bx bx-briefcase' ></i> Experience</a></li>
-                <li><a href="#"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
+                <li><a href="{% url "corporate_training" %}"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
                 <li><a href="#"><i class="fa-regular fa-file"></i> Courses</a></li>
                 <li><a href="#"><i class='bx bxs-report'></i> Project Report</a></li>
                 <li><a href="#"><i class="fa-regular fa-user"></i> Admin Settings</a></li>
@@ -61,175 +61,25 @@
                     </tr>
                 </thead>
                 <tbody>
+                    {% for i in data %}
                     <tr>
-                        <td>1.</td>
-                        <td>**********</td>
-                        <td>Leo</td>
-                        <td>hiremi@gmail.com</td>
-                        <td>84515*****</td>
-                        <td>College Name</td>
-                        <td>Branch</td>
-                        <td>Passing year</td>
-                        <td>College State</td>
-                        <td>Birth Place State</td>
-                        <td>Male</td>
-                        <td><div class="ver3">Non-Verified</div></td>
-                        <td><div class="view">View</div></td>
+                        <td>{{forloop.counter}}</td>
+                        <td>********</td>
+                        <td>{{i.full_name}}</td>
+                        <td>{{i.email}} </td>
+                        <td>{{i.phone_number}} </td>
+                        <td>{{i.college_name}} </td>
+                        <td>{{i.branch_name}}</td>
+                        <td>{{i.passing_year}}</td> 
+                        <td>{{i.college_state}} </td>
+                        <td>{{i.date_of_birth}} </td>
+                        <td>{{i.gender}} </td>
+                        <td><div class="ver2">Non Verified</div></td>
+                        <td><div class="view"><a href="{% url "view_Info2" pk=i.id %}">View</a></div></td>
                     </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>2.</td>
-                        <td>**********</td>
-                        <td>Leo</td>
-                        <td>hiremi@gmail.com</td>
-                        <td>84515*****</td>
-                        <td>College Name</td>
-                        <td>Branch</td>
-                        <td>Passing year</td>
-                        <td>College State</td>
-                        <td>Birth Place State</td>
-                        <td>Male</td>
-                        <td><div class="ver3">Non-Verified</div></td>
-                        <td><div class="view">View</div></td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>3.</td>
-                        <td>**********</td>
-                        <td>Leo</td>
-                        <td>hiremi@gmail.com</td>
-                        <td>84515*****</td>
-                        <td>College Name</td>
-                        <td>Branch</td>
-                        <td>Passing year</td>
-                        <td>College State</td>
-                        <td>Birth Place State</td>
-                        <td>Male</td>
-                        <td><div class="ver3">Non-Verified</div></td>
-                        <td><div class="view">View</div></td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>4.</td>
-                        <td>**********</td>
-                        <td>Leo</td>
-                        <td>hiremi@gmail.com</td>
-                        <td>84515*****</td>
-                        <td>College Name</td>
-                        <td>Branch</td>
-                        <td>Passing year</td>
-                        <td>College State</td>
-                        <td>Birth Place State</td>
-                        <td>Male</td>
-                        <td><div class="ver3">Non-Verified</div></td>
-                        <td><div class="view">View</div></td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>5.</td>
-                        <td>**********</td>
-                        <td>Leo</td>
-                        <td>hiremi@gmail.com</td>
-                        <td>84515*****</td>
-                        <td>College Name</td>
-                        <td>Branch</td>
-                        <td>Passing year</td>
-                        <td>College State</td>
-                        <td>Birth Place State</td>
-                        <td>Male</td>
-                        <td><div class="ver3">Non-Verified</div></td>
-                        <td><div class="view">View</div></td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>6.</td>
-                        <td>**********</td>
-                        <td>Leo</td>
-                        <td>hiremi@gmail.com</td>
-                        <td>84515*****</td>
-                        <td>College Name</td>
-                        <td>Branch</td>
-                        <td>Passing year</td>
-                        <td>College State</td>
-                        <td>Birth Place State</td>
-                        <td>Male</td>
-                        <td><div class="ver3">Non-Verified</div></td>
-                        <td><div class="view">View</div></td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>7.</td>
-                        <td>**********</td>
-                        <td>Leo</td>
-                        <td>hiremi@gmail.com</td>
-                        <td>84515*****</td>
-                        <td>College Name</td>
-                        <td>Branch</td>
-                        <td>Passing year</td>
-                        <td>College State</td>
-                        <td>Birth Place State</td>
-                        <td>Male</td>
-                        <td><div class="ver3">Non-Verified</div></td>
-                        <td><div class="view">View</div></td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>8.</td>
-                        <td>**********</td>
-                        <td>Leo</td>
-                        <td>hiremi@gmail.com</td>
-                        <td>84515*****</td>
-                        <td>College Name</td>
-                        <td>Branch</td>
-                        <td>Passing year</td>
-                        <td>College State</td>
-                        <td>Birth Place State</td>
-                        <td>Male</td>
-                        <td><div class="ver3">Non-Verified</div></td>
-                        <td><div class="view">View</div></td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>9.</td>
-                        <td>**********</td>
-                        <td>Leo</td>
-                        <td>hiremi@gmail.com</td>
-                        <td>84515*****</td>
-                        <td>College Name</td>
-                        <td>Branch</td>
-                        <td>Passing year</td>
-                        <td>College State</td>
-                        <td>Birth Place State</td>
-                        <td>Male</td>
-                        <td><div class="ver3">Non-Verified</div></td>
-                        <td><div class="view">View</div></td>
-                    </tr>
-                </tbody>
-                <tbody>
-                    <tr>
-                        <td>10.</td>
-                        <td>**********</td>
-                        <td>Leo</td>
-                        <td>hiremi@gmail.com</td>
-                        <td>84515*****</td>
-                        <td>College Name</td>
-                        <td>Branch</td>
-                        <td>Passing year</td>
-                        <td>College State</td>
-                        <td>Birth Place State</td>
-                        <td>Male</td>
-                        <td><div class="ver3">Non-Verified</div></td>
-                        <td><div class="view">View</div></td>
-                    </tr>
-                </tbody>
+                    {% endfor %}
+                  </tbody>
+                
             </table>
         </div>
     </div>
