--- a/Hiremi/Hiremiapp/templates/dashboard.html
+++ b/Hiremi/Hiremiapp/templates/dashboard.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1><img src="{% static "asset/icon.png" %}" alt=""></h1>
+        <h1><img class="logo" src="{% static "asset/icon.png" %}" alt=""></h1>
         <p>Super Admin</p>
         <nav>
             <ul>
