--- a/Hiremi/Hiremiapp/static/css/dashboard.css
+++ b/Hiremi/Hiremiapp/static/css/dashboard.css
@@ -262,8 +262,21 @@ tbody {
 th {
   font-size: 20px;
 }
+label #btn,
+label #cancel {
+  color: white;
+  font-size: 30px;
+  float: left;
+  line-height: 80px;
+  margin-left: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check {
+  display: none;
+}
 /* tablets and  */
-@media only screen and (min-width: 600px) and (max-width: 900px) {
+@media only screen and (min-width: 700px) and (max-width: 900`px) {
   header {
     width: 140px;
   }
@@ -531,10 +544,309 @@ th {
     text-align: center;
   }
 }
-
+/* mobile */
 @media only screen and (max-width: 400px) {
   header {
-    width: 100px;
+    width: 70px;
+  }
+  header .logo {
+    width: 80px;
+    height: 30px;
+  }
+  header h1 {
+    font-size: 10px;
+  }
+  header p {
+    font-size: 10px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+  }
+
+  header nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  header nav ul {
+    list-style-type: none;
+    padding-left: -20px;
+    font-size: 15px;
+
+    /* transition: all 0.5s; */
+  }
+
+  header nav ul li:first-child {
+    background-color: #f2f2f281;
+    height: 10px;
+    position: absolute;
+    width: 85%;
+    border-radius: 6px;
+  }
+  header nav ul li {
+    padding-right: 20px;
+
+    left: -1000%;
+  }
+  header nav ul li {
+    width: 100%;
+    padding: 7px 0px 20px 10px;
+  }
+  header i {
+    padding-left: -10px;
+    padding-right: 10px;
+    font-size: 20px;
+  }
+  header nav a {
+    color: white;
+    text-decoration: none;
+  }
+  .search {
+    background-color: #f2f2f2;
+    height: 100%;
+    width: 100%;
+    padding-left: 1%;
+    padding-bottom: 50px;
+  }
+  .inp-bg {
+    padding-left: 150px;
+    padding-top: 20px;
+
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .sec-inp {
+    width: 100%;
+  }
+  .inp-bg i {
+    font-size: 20px;
+    color: red;
+    position: absolute;
+    left: 36%;
+  }
+  .inp-bg img {
+    position: absolute;
+    visibility: hidden;
+    left: 62%;
+    font-size: 10px;
+    height: 15px;
+    width: 15px;
+  }
+  .inp-bg input::placeholder {
+    padding-left: 38px;
+    font-size: 20px;
+  }
+  .inp-bg input {
+    border-radius: 20px;
+    box-shadow: 1px 0.5px 5px 0.5px;
+    padding: 10px;
+    height: 20px;
+    width: 600px;
+    border: none;
+    outline: none;
+  }
+  .sec-inp img {
+    width: 70px;
+  }
+  .account {
+    background-color: #f2f2f2;
+    width: 150%;
+    height: 50%;
+  }
+  .account h4 {
+    text-align: center;
+    color: red;
+  }
+  .ac-in h4 {
+    padding-top: 10px;
+    display: grid;
+    width: 35%;
+    font-size: 10px;
+    grid-template-columns: repeat(3, 1fr);
+    padding-right: 120px;
+    padding-left: 0px;
+    align-items: center;
+    column-gap: 0px;
+  }
+  .ac-in {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .ac-in h4::before,
+  .ac-in h4::after {
+    content: "";
+    height: 2px;
+    background-color: #000;
+    display: inline;
+  }
+  .statement {
+    display: block;
+    justify-content: center;
+    column-gap: px;
+    margin-left: 120px;
+    padding-top: -20px;
+  }
+  .ac-st {
+    background-color: #fff;
+    border-radius: 10px;
+    position: relative;
+    border-left: 5px solid red;
+    width: 160px;
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    margin-bottom: -20px;
+    padding-bottom: 5px;
+    height: 120px;
+
+    padding-left: 3px;
+    margin-top: 50px;
+  }
+  .ac-st .icon {
+    background: linear-gradient(30deg, red, rgb(0, 0, 0));
+    width: 30px;
+    height: 37px;
+    border-radius: 50%;
+  }
+  .ac-st .icon i {
+    padding: 12px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    border-radius: 50%;
+  }
+  .state {
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: -5px;
+    margin-right: 400px;
+  }
+  .state h3,
+  .state p {
+    color: red;
+  }
+  .state h3 {
+    padding-top: 28px;
+    font-size: 10px;
+  }
+  .state p1 {
+    font-weight: 600;
+    font-size: 10px;
+  }
+  .state p {
+    font-size: 10px;
+    padding-top: 5px;
+  }
+  .sub-st {
+    position: absolute;
+    right: 2%;
+    text-align: end;
+    padding-top: 70px;
+  }
+  .sub-st p1 {
+    font-size: 10px;
+    text-align: end;
+    color: springgreen;
+  }
+  .sub-st p {
+    font-size: 10px;
+    color: lightgray;
+  }
+  .list {
+    display: flex;
+    justify-content: center;
+  }
+  .list h4 {
+    font-size: 10px;
+    display: grid;
+    width: 35%;
+    grid-template-columns: repeat(3, 1fr);
+    padding-right: 120px;
+    padding-left: 0px;
+    align-items: center;
+    column-gap: 0px;
+  }
+  .list h4::before,
+  .list h4::after {
+    content: "";
+    height: 2px;
+    background-color: #000;
+    display: inline;
+  }
+  .list-items {
+    display: flex;
+    justify-content: end;
+  }
+  .list-items ul {
+    display: flex;
+    list-style: none;
+    column-gap: 20px;
+    padding-right: 200px;
+  }
+  .list-items ul li {
+    font-size: 6px;
+    font-weight: 600;
+    color: white;
+    padding: 5px;
+    border-radius: 20px;
+    background: linear-gradient(30deg, red, rgb(0, 0, 0));
+  }
+  .list1 .list-type {
+    margin-left: 19%;
+  }
+  thead,
+  th {
+    font-size: 9px;
+  }
+  table {
+    width: 5%;
+  }
+  table,
+  th,
+  td {
+    padding: 2px;
+  }
+  table,
+  th,
+  td {
+    border-bottom: 2px solid gray;
+    border-spacing: 0;
+  }
+  table,
+  td {
+    font-size: 8px;
+    text-align: center;
+    border-bottom: 2px solid lightgray;
+  }
+  table,
+  tbody {
+    text-align: center;
+  }
+  label #btn {
+    display: block;
+    padding-bottom: 900px;
+  }
+  #check: checked ~ul {
+    left: 0;
+  }
+  #check: checked ~;
+  label #btn {
+    display: none;
+  }
+  #check: checked~;
+  label #cancel {
+    display: block;
+  }
+}
+
+/* ipad screen */
+@media only screen and (min-width: 700px) and (max-width: 1024px) {
+  header {
+    width: 140px;
   }
   header .logo {
     width: 150px;
@@ -602,17 +914,17 @@ th {
     width: 100%;
   }
   .inp-bg i {
-    font-size: 25px;
+    font-size: 20px;
     color: red;
     position: absolute;
-    left: 60%;
+    left: 30%;
   }
   .inp-bg img {
     position: absolute;
-    left: 120%;
+    left: 86%;
   }
   .inp-bg input::placeholder {
-    padding-left: 50px;
+    padding-left: 55px;
     font-size: 25px;
   }
   .inp-bg input {
@@ -639,10 +951,10 @@ th {
   .ac-in h4 {
     padding-top: 25px;
     display: grid;
-    width: 70%;
-    font-size: 15px;
+    width: 40%;
+    font-size: 12px;
     grid-template-columns: repeat(3, 1fr);
-    padding-left: 220px;
+    padding-right: 450px;
     align-items: center;
     column-gap: 0px;
   }
@@ -658,12 +970,13 @@ th {
     height: 2px;
     background-color: #000;
     display: inline;
+    padding-left: -300px;
   }
   .statement {
     display: flex;
     justify-content: center;
     column-gap: 10px;
-    margin-left: 230px;
+    margin-left: -240px;
   }
   .ac-st {
     background-color: #fff;
@@ -737,6 +1050,7 @@ th {
     width: 70%;
     grid-template-columns: repeat(3, 1fr);
     padding-left: 220px;
+    padding-right: 450px;
     align-items: center;
     column-gap: 0px;
   }
@@ -744,8 +1058,9 @@ th {
   .list h4::after {
     content: "";
     height: 2px;
-    background-color: #000;
+    background-color: solid black;
     display: inline;
+    padding-left: -300px;
   }
   .list-items {
     display: flex;
@@ -755,7 +1070,7 @@ th {
     display: flex;
     list-style: none;
     column-gap: 20px;
-    padding-right: 10px;
+    padding-right: 460px;
   }
   .list-items ul li {
     font-size: 10px;
@@ -766,14 +1081,14 @@ th {
     background: linear-gradient(30deg, red, rgb(0, 0, 0));
   }
   .list1 .list-type {
-    margin-left: 30%;
+    margin-left: 13%;
   }
   thead,
   th {
-    font-size: 14px;
+    font-size: 12px;
   }
   table {
-    width: 100%;
+    width: 60%;
   }
   table,
   th,
