--- a/Hiremi/Hiremiapp/templates/Internship.html
+++ b/Hiremi/Hiremiapp/templates/Internship.html
@@ -92,7 +92,7 @@
                 <div class="state">
                     <h3>{{Select_count}}</h3>
                     <p1>Selected</p1>
-                    <p>view All <i class="fa-solid fa-arrow-right"></i></p>
+                    <p><a href="{% url "intern_dash2" %}">View All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+32%</p1>
@@ -107,7 +107,7 @@
                 <div class="state">
                     <h3>{{Reject_count}}</h3>
                     <p1>Rejected</p1>
-                    <p>view All <i class="fa-solid fa-arrow-right"></i></p>
+                    <p><a href="{% url "intern_dash3" %}">View All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+32%</p1>
