--- a/Hiremi/Hiremiapp/templates/fresher.html
+++ b/Hiremi/Hiremiapp/templates/fresher.html
@@ -52,7 +52,7 @@
                 <div class="state">
                     <h3>{{fresher_count}}</h3>
                     <p1>Fresher Applied</p1>
-                    <p><a href="{% url "corporate_dash1" %}">View All</a> <i class="fa-solid fa-arrow-right"></i></p>
+                    <p><a href="{% url "fresher_dash1" %}">View All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+40%</p1>
@@ -67,7 +67,7 @@
                 <div class="state">
                     <h3>{{select_count}}</h3>
                     <p1>Selected</p1>
-                    <p><a href="{% url "Mentor_dash2" %}">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
+                    <p><a href="{% url "fresher_dash2" %}">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+32%</p1>
@@ -83,7 +83,7 @@
                 <div class="state">
                     <h3>{{Reject_count}}</h3>
                     <p1>Rejected</p1>
-                    <p><a href="">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
+                    <p><a href="{% url "fresher_dash3" %}">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+32%</p1>
