--- a/Hiremi/Hiremiapp/static/css/dashboard4.css
+++ b/Hiremi/Hiremiapp/static/css/dashboard4.css
@@ -171,11 +171,19 @@ table{
     color: red;
     border: 1px solid red;
 }
+
 .view{
     background: linear-gradient(30deg, red, rgb(0, 0, 0));
     color: white;
     border-radius: 20px;
     padding: 5px 15px;
+}
+.view a{
+    background: linear-gradient(30deg, red, rgb(0, 0, 0));
+    color: white;
+    border-radius: 20px;
+    padding: 5px 15px;
+    text-decoration: none;
 }
 @media only screen and (max-width: 600px){
     .search{
