--- a/Hiremi/Hiremiapp/templates/corporate.html
+++ b/Hiremi/Hiremiapp/templates/corporate.html
@@ -23,7 +23,7 @@
                 <li><a href="{% url "internship" %}"><i class="fa-solid fa-desktop"></i> Internship</a></li>
                 <li><a href="{% url "fresher" %}"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
                 <li><a href="#"><i class='bx bx-briefcase' ></i> Experience</a></li>
-                <li><a href="#"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
+                <li><a href="{% url "corporate_training" %}"><i class="fa-solid fa-folder-tree"></i> Corporate Training</a></li>
                 <li><a href="#"><i class="fa-regular fa-file"></i> Courses</a></li>
                 <li><a href="#"><i class='bx bxs-report'></i> Project Report</a></li>
                 <li><a href="#"><i class="fa-regular fa-user"></i> Admin Settings</a></li>
@@ -83,7 +83,7 @@
                 <div class="state">
                     <h3>{{Reject_count}}</h3>
                     <p1>Rejected</p1>
-                    <p><a href="">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
+                    <p><a href="{% url "corporate_dash3" %}">view All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
                     <p1>+32%</p1>
