--- a/Hiremi/Hiremiapp/templates/dashboard.html
+++ b/Hiremi/Hiremiapp/templates/dashboard.html
@@ -55,7 +55,7 @@
                     <p><a href="{% url "dashboard1" %}">View All</a> <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
                 <div class="sub-st">
-                    <p1>+40%</p1>
+                    <p1>+{{current_month_registrations}}%</p1>
                     <p>This month</p>
                 </div>
             </div>
@@ -110,11 +110,17 @@
             <h4 class="title">State Ranking</h4>
         </div><br>
         <div class="list-items">
-            <ul>
+              <ul>
                 <li>Download App</li>
                 <li>Accounts Verified</li>
                 <li>Non-Verified Accounts</li>
             </ul>
+
+            {% comment %} <div>
+                <button onclick="sortStates('total')">Sort by Total</button>
+                <button onclick="sortStates('verified')">Sort by Verified</button>
+                <button onclick="sortStates('unverified')">Sort by Unverified</button>
+            </div> {% endcomment %}
         </div><br><br>
         <div class="list1">
             <div class="list-type">
@@ -143,5 +149,6 @@
             </div>
         </div>
     </div>
+    
 </body>
 </html>
