--- a/Hiremi/Hiremiapp/static/css/dashboard.css
+++ b/Hiremi/Hiremiapp/static/css/dashboard.css
@@ -38,6 +38,13 @@ header nav ul li:first-child{
   width: 85%;
   border-radius: 6px;
 }
+/* header nav ul li:nth-child(4) {
+  background-color: #f2f2f281;
+  height: 10px;
+  position: absolute;
+  width: 85%;
+  border-radius: 6px;
+} */
 header nav ul li {
   width: 100%;
   padding: 10px 0px 20px 20px;
@@ -173,6 +180,11 @@ header nav a {
 }
 .state p{
   padding-top: 20px;
+}
+.state p a{
+  padding-top: 20px;
+  text-decoration: none;
+  color: red;
 }
 .sub-st{
   position: absolute;
