--- a/Hiremi/Hiremiapp/static/css/mentoreship.css
+++ b/Hiremi/Hiremiapp/static/css/mentoreship.css
@@ -31,13 +31,21 @@ header nav{
 header nav ul {
     list-style-type: none;
 }
-header nav ul li:first-child{
+/* header nav ul li:nth-child(4) {
     background-color: #f2f2f281;
     height: 10px;
     position: absolute;
     width: 85%;
     border-radius: 6px;
-}
+  } */
+
+  header nav ul li:nth-child(4) {
+    background-color: #f2f2f281;
+    height: 10px;
+    position: absolute;
+    width: 85%;
+    border-radius: 6px;
+  }  
 header nav ul li {
     width: 100%;
     padding: 10px 0px 20px 20px;
