--- a/Hiremi/Hiremiapp/templates/dashboard1.html
+++ b/Hiremi/Hiremiapp/templates/dashboard1.html
@@ -8,6 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/dashboard1.css' %}">
+    <link rel="shortcut icon" href="{% static 'asset/icon.png' %}" type="image/x-icon">
 </head>
 <body>
     <header>
