--- a/Hiremi/Hiremiapp/templates/dashboard.html
+++ b/Hiremi/Hiremiapp/templates/dashboard.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{% static "css/dashboard.css" %}">
 </head>
 <body>
+
     <header>
         <h1><img class="logo" src="{% static "asset/icon.png" %}" alt=""></h1>
         <p>Super Admin</p>   
@@ -44,6 +45,7 @@
          
                </label>
     </header>
+    <h1 style="color:red">{{msg}}</h1>
     <div class="search">
         <div class="sec-inp">
             <div class="inp-bg">
