--- a/Hiremi/Hiremiapp/templates/dashboard1.html
+++ b/Hiremi/Hiremiapp/templates/dashboard1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/861ce09321.js" crossorigin="anonymous"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Document</title>
+    <title>Hiremi Dashboard</title>
     <link rel="stylesheet" href="{% static 'css/dashboard1.css' %}">
     <link rel="shortcut icon" href="{% static 'asset/icon.png' %}" type="image/x-icon">
 </head>
@@ -36,7 +36,7 @@
         <div class="sec-inp">
             <div class="inp-bg">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Search"  value="{{ name_query }}">
+                <input type="text" placeholder="Search" value="{{ name_query }}">
                 <img src="../static/asset/logo.jpg" alt="">
             </div>
         </div>
