--- a/Hiremi/Hiremiapp/static/css/dashboard.css
+++ b/Hiremi/Hiremiapp/static/css/dashboard.css
@@ -236,6 +236,7 @@ header nav a {
   padding: 10px;
   border-radius: 20px;
   background: linear-gradient(30deg, red, rgb(0, 0, 0));
+  cursor: pointer;
 }
 .list1 .list-type{
   margin-left: 15%;
