--- a/Hiremi/Hiremiapp/static/css/mentor-dash1.css
+++ b/Hiremi/Hiremiapp/static/css/mentor-dash1.css
@@ -35,14 +35,14 @@ header nav{
 header nav ul {
     list-style-type: none;
 }
-header nav ul li:first-child{
+/* header nav ul li:first-child{
     background-color: #f2f2f281;
     height: 10px;
     border-left: 5px solid white;
     position: absolute;
     width: 80%;
     border-radius: 6px;
-}
+} */
 header nav ul li {
     width: 100%;
     padding: 10px 0px 20px 20px;
