--- a/Hiremi/Hiremiapp/templates/dashboard3.html
+++ b/Hiremi/Hiremiapp/templates/dashboard3.html
@@ -46,16 +46,11 @@
                 <thead>
                     <tr>
                         <th>S.NO</th>
-                        <th>UTR.No</th>
                         <th>Name</th>
-                        <th>Email</th>
-                        <th>Phone No</th>
-                        <th>College Name</th>
-                        <th>Branch <span><></span></th>
-                        <th>Passing Year <span><></span></th>
-                        <th>College State <span><></span></th>
-                        <th>Birth Place State <span><></span></th>
-                        <th>Gender</th>
+                        <th>Amount</th>
+                        <th>TXN Token</th>
+                        <th>Order ID</th>
+                        <th>Date <span><></span></th>
                         <th>Status <span><></span></th>
                         <th>View</th>
                     </tr>
@@ -64,16 +59,11 @@
                     {% for i in transactions %}
                     <tr>
                         <td>{{ forloop.counter }}</td>
-                        <td>********</td>
                         <td>{{ i.name }}</td>
-                        <td>{{ i.email }}</td>
-                        <td>{{ i.phone_number }}</td>
-                        <td>{{ i.college_name }}</td>
-                        <td>{{ i.branch_name }}</td>
-                        <td>{{ i.passing_year }}</td>
-                        <td>{{ i.college_state }}</td>
-                        <td>{{ i.date_of_birth }}</td>
-                        <td>{{ i.gender }}</td>
+                        <td>{{ i.amount }}</td>
+                        <td>{{ i.txn_token }}</td>
+                        <td>{{ i.order_id }}</td>
+                        <td>{{ i.created_at }}</td>
                         <td><div class="ver2">{{ i.is_paid }}</div></td>
                         <td><div class="view"><a href="{% url 'view_Info3' pk=i.id %}">View</a></div></td>
                     </tr>
