--- a/Hiremi/Hiremiapp/templates/Mentoreship.html
+++ b/Hiremi/Hiremiapp/templates/Mentoreship.html
@@ -19,7 +19,7 @@
                 <li><a href="{% url "dashboard" %}"><i class='bx bx-home-alt'></i> Dashboard</a></li>
                 <li><a href="#"><i class="fa-solid fa-chart-simple"></i> Analytics</a></li>
                 <li><a href="#"><i class="fa-solid fa-file-arrow-down"></i>  App Download Status</a></li>
-                <li><a href="{% url "Mentoreship" %}"><i class='bx bxs-graduation' ></i> Mentorship</a></li>
+                <li><a href="{% url "Mentoreship" %}"><i class='bx bxs-graduation active' ></i> Mentorship</a></li>
                 <li><a href="{% url "internship" %}"><i class="fa-solid fa-desktop"></i> Internship</a></li>
                 <li><a href="{% url "fresher" %}"><i class="fa-solid fa-laptop-code"></i> Fresher</a></li>
                 <li><a href="#"><i class='bx bx-briefcase' ></i> Experience</a></li>
