--- a/Hiremi/Hiremiapp/templates/index.html
+++ b/Hiremi/Hiremiapp/templates/index.html
@@ -8,6 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HireMi</title>
     <link rel="stylesheet" href="{% static "css\login.css" %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <style>
+        .login-form {
+            width: 300px;
+            margin: 0 auto;
+            padding: 50px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
     <div class="bg">
@@ -16,7 +28,7 @@
                 <img class="" src="{% static "asset/icon.png" %}" alt="">
             </div>
             <div class="log">
-                <form  action="{% url "superuser_login" %}" method="POST">
+                <form  action="{% url "superuser_login" %}" method="POST"  onsubmit="handleLogin(event)">
                     {% csrf_token %}
                     <h2>Admin Login</h2><br><br>
                     <label>username</label><br><br><i class="fa-solid fa-user"></i>
@@ -28,13 +40,20 @@
                     </div>
                 </form>
             </div>
+            <div id="popup" class="popup">
+                <span class="close" onclick="closePopup()">&times;</span>
+                <div id="popup-message"></div>
+            </div>
         </div>
-        {% if messages %}
-    {% for message in messages %}
-        <div>{{ message }}</div>
-    {% endfor %}
-{% endif %}
     </div>
-
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            {% if messages %}
+                {% for message in messages %}
+                    alert("{{ message }}");
+                {% endfor %}
+            {% endif %}
+        });
+    </script>
 </body>
 </html>
